Structure and readme file fix
